# jabberd2

./: Makefile.am  configure.ac  jabberd2.pro
c2s/: Makefile.am  c2s.c  main.c
lib/: access.c  config.c  jqueue.c  nad.c  xdata.c  xhash.c
mio/: mio.h
router/: main.c  user.c
sm/: Makefile.am
sx/: sasl.c  ssl.c
tests/: Makefile.am  check_config.c
